--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Good-Food-Restaurant</title>
     <link rel="stylesheet" href="./styles/style.css">
+    
+    <!--Design was taken from figma provided by programming hero-->
 </head>
 <body>
+
+    <section>
+        <div>
+            <p>Savor the Flavors</p>
+            <h1>Experience Culinary Excellence Food Experience</h1>
+            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock</p>
+            <button>Shop The Hotest Food</button>
+        </div>
+    </section>
     
 </body>
 </html>
