--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <p class="subtitle">Savor the Flavors</p>
             <h1 class="title_01">Experience Culinary Excellence Food Experience</h1>
             <p class="description_01">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock</p>
-            <button>Shop The Hotest Food</button>
+            <div class="btn_container">
+                <button class="btn_style">Shop The Hotest Food</button>
+            </div>
         </div>
     </section>
     
