--- a/index.html
+++ b/index.html
@@ -21,5 +21,18 @@
         </div>
     </section>
     
+
+    <section id="card-box">
+        <div>
+            <p></p>
+            <h2></h2>
+            <div></div>
+            <div></div>
+            <div></div>
+            <button></button>
+        </div>
+    </section>
+
+
 </body>
 </html>
