--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
     
 
-    <section id="card-box">
+    <section id="card_boxes_section">
         <div>
             <p></p>
             <h2></h2>
