--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <section id="card_boxes_section">
         <div>
-            <p></p>
-            <h2></h2>
+            <p>rtrt</p>
+            <h2>Heading</h2>
             <div></div>
             <div></div>
             <div></div>
