--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div></div>
             <div></div>
             <div></div>
-            <button></button>
+            <button>Buy Now</button>
         </div>
     </section>
 
