--- a/index.html
+++ b/index.html
@@ -23,13 +23,51 @@
     
 
     <section id="card_boxes_section">
-        <div>
-            <p>rtrt</p>
-            <h2>Heading</h2>
-            <div></div>
-            <div></div>
-            <div></div>
-            <button>Buy Now</button>
+        <div id="card_boxes_container">
+            <div class="info">
+                <p class="subtitle_02">Favorite Brands</p>
+                <h1 class="title_02">Your Favorite Brands Food Are Now On Sale</h1>
+            </div>
+
+            <div class="card_container">
+
+                <div class="card">
+                    <div clas="image_box">
+                        <img src="./assets/pizza.png" alt="pizza" >
+                    </div>
+                    <div class="shop">
+                        <Span>Pizza burg</Span>
+                    </div>
+                    <h2>up to 50% off</h2>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                </div>
+                <div class="card">
+                    <div clas="image_box">
+                        <img src="./assets/pizza.png" alt="pizza" >
+                    </div>
+                    <div class="shop">
+                        <Span>Pizza burg</Span>
+                    </div>
+                    <h2>up to 50% off</h2>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                </div>
+                <div class="card">
+                    <div clas="image_box">
+                        <img src="./assets/pizza.png" alt="pizza" >
+                    </div>
+                    <div class="shop">
+                        <Span>Pizza burg</Span>
+                    </div>
+                    <h2>up to 50% off</h2>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                </div>
+                
+            </div>
+
+            <div class="btn_container">
+                <button class="btn_style">Watch all sales</button>
+            </div>
+
         </div>
     </section>
 
