--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="card">
                     <div clas="image_box">
-                        <img src="./assets/pizza.png" alt="pizza" >
+                        <img src="./assets/biriyani.png" alt="pizza" >
                     </div>
                     <div class="shop">
                         <Span>Pizza burg</Span>
@@ -53,22 +53,27 @@
                 </div>
                 <div class="card">
                     <div clas="image_box">
-                        <img src="./assets/pizza.png" alt="pizza" >
+                        <img src="./assets/burger.png" alt="pizza" >
                     </div>
                     <div class="shop">
                         <Span>Pizza burg</Span>
                     </div>
                     <h2>up to 50% off</h2>
                     <p>Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
-                </div>
-                
+                </div>  
+
             </div>
 
             <div class="btn_container">
                 <button class="btn_style">Watch all sales</button>
             </div>
-
         </div>
+    </section>
+
+
+
+    <section>
+        
     </section>
 
 
